Add some infos.

--- a/_posts/2022-05-06-bak.md
+++ b/_posts/2022-05-06-bak.md
@@ -7,3 +7,30 @@ tags: [pwn]
 年轻人的第一次盲字符串格式化溢出
 
 ![](/assets/img/247ctf/pwn/confused_environment_write/logo.png)
+
+
+题目是一个PWN题，但是没有给二进制文件，只给了题目部署IP和端口。连上题目环境进行观察：
+![](/assets/img/247ctf/pwn/confused_environment_write/1.png)
+题目打印了一些常规信息，并请求用户输入数据。既然是PWN题，就先尝试输入超长字符串看看会不会栈溢出：
+![](/assets/img/247ctf/pwn/confused_environment_write/2.png)
+
+![](/assets/img/247ctf/pwn/confused_environment_write/3.png)
+
+由上图可以发现，程序限制了单次输入字符串的长度（64字节），保证进程不会栈溢出。
+无法栈溢出，试试字符串格式化溢出：
+![](/assets/img/247ctf/pwn/confused_environment_write/4.png)
+
+根据红框中的信息，可以明确知道这题存在字符串格式化溢出。而且根据上图中的0x08048787，可以推断此程序为32位，且没有开启PIE保护机制。
+```
+热知识1: 在默认及未开启PIE的情况下，x86平台下二进制可执行文件的代码段加载地址为0x08048000，x86-64的则为0x40000:
+```
+![](/assets/img/247ctf/pwn/confused_environment_write/5.png)
+
+
+为了便于了解32位程序的内存布局，我自己写了一个类似功能的c代码并运行起来，观察其内存布局：
+![](/assets/img/247ctf/pwn/confused_environment_write/6.png)
+
+可以看到如果程序以默认地址0x08048000加载代码段的话，那么0x804a000很可能如上图中显示可读可写,且这个段的开头是.got.plt。接下来尝试读出0x0804a000中的内容，观察是否确实为.got.plt。
+```
+热知识2：未开启relro或者开启partial relro的情况下，.got.plt才可以写。
+```
