--- a/_posts/2022-05-06-bak.md
+++ b/_posts/2022-05-06-bak.md
@@ -2,10 +2,9 @@
 layout: post
 title: 24/7CTF-PWN-Confused environment write
 tags: [pwn]
-lang: zh-Hans
 ---
 
-test me aaaa
+test me aaaa.
 
 ### 年轻人的第一次盲字符串格式化溢出
 
